# sloth-engine

./: .editorconfig  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.gradle  gradle.properties  logging.properties  main.cpp  pom.xml  settings.gradle
assets/models/: cube.blend  rabbit.mtl
assets/shaders/: ColorFragmentShader.frag  ColorShader.frag  Default.frag  Default.vert  FontRender.frag  FontRender.vert  Icon.frag  Icon.geom  Icon.vert  StandardShading.frag  StandardShading.vert  TransformVertexShader.vert  normal.frag  normal.geom  normal.vert  phong.vert
assets/textures/: Rex_N.tga  Rex_S.tga  TileMap.xcf
gradle/: ide.gradle
gradle/wrapper/: gradle-wrapper.properties
include/: BasicShader.h  DisplayManager.h  ICleanable.h  ObjectLoader.h  RawModel.h  ShaderException.h  ShaderProgram.h  gl_stuff.h
legacyCPP/: .gitignore  CMakeLists.txt  Makefile
legacyCPP/include/: BasicShader.h  Display.h  DisplayException.h  RawModel.h  ShaderProgram.h
legacyCPP/src/: BasicShader.cpp  Display.cpp  RawModel.cpp  main.cpp  niceGrid
lib/cmake/Modules/: FindGLFW.cmake  FindGLM.cmake  FindReadline.cmake
src/: BasicShader.cpp  DisplayException.cpp  DisplayManager.cpp  ObjectLoader.cpp  RawModel.cpp  ShaderException.cpp  ShaderProgram.cpp  main.cpp
src/main/java/core/: Engine.java  EngineComponent.java
src/main/java/font/: FontRenderer.java
src/main/java/geometry/: Cube.java  Mesh.java  MeshLoaderManager.java  MeshManager.java  MeshRepository.java  Plane.java  VertexAttributePointer.java  VertexBuffer.java
src/main/java/math/: Color.java  MathUtils.java  MatrixUtils.java
src/main/java/nifty.jwgl3.input/: GLFWKeyCallbackDispatcher.java  Lwjgl3InputSystem.java
src/main/java/renderer/: Lwjgl3Renderer.java  OpenGLCaps.java  RenderContext.java  RenderState.java  Renderer.java  RendererExpception.java  RendererManager.java  RendererType.java
src/main/java/sandbox/: EngineContext.java  Sandbox.java  ShaderSlothJavaFx.java
src/main/java/scene/: BaseCamera.java  Geometry.java  Node.java  TargetCamera.java
src/main/java/shader/: Attribute.java  Shader.java  ShaderRepository.java  ShaderSource.java  ShaderType.java  (+2 more)
src/main/resources/: logback.xml  logging.properties
src/test/java/: SemaphoreHowTo.java
uml/: Simple3dEngine .xml
(+382 files in other folders)
